сделал футер, fix horizontal scroll

--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,5 +1,5 @@
 .photo-grid__item {
-  min-width: 282px;
+  max-width: 485px;
   width: 100%;
   height: 361px;
   margin: 0 auto;
