--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,13 +1,16 @@
 .photo-grid {
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr;
   row-gap: 20px;
   column-gap: 17px;
+  margin-bottom: 48px;
 }
 
 @media screen and (min-width: 634px) {
   .photo-grid {
     grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 67px;
   }
 }
 
